<resources>
    <string name="app_name">SG500test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sc">Sc</string>
    <string name="title_activity_screen3">Screen3Activity</string>
    <string name="title_activity_screen4">Screen4Activity</string>
    <string name="no_wifi">In case internet connection is unavailable </string>
    <string name="Make_sure">1)Make sure…</string>
    <string name="Check_your">2)Check your…</string>
    <string name="Verify_that">3)Verify that…</string>
    <string name="Contact">4)Contact our customers support… </string>
    <string name="title_activity_no_wifi">NoWifi</string>
    <string name="title_vsim">Your vSIM Portable Hotspot(information for support)</string>
    <string name="title_uk">Toll-free global number:1-800-800-707 vph2@vodafone.co.uk</string>
    <string name="title_warn">Please mind !</string>
    <string name="warn_text">Your data plan is running out. You currently have less than 20 Mbts left on your plan. Please log in to your Vodafone account to top up. Click to dismiss </string>
    <string name="keypad_power">POWER</string>
    <string name="keypad_volume_down">VOLUME_DOWN</string>
    <string name="keypad_text">Please press the keys first</string>
    <string name="wifiList">wifilist</string>
    <string name="wifi_text">WiFi test will be completed within 30 seconds, please wait.</string>
    <string name="wifi_is_closing">WiFi is closing, please retry after a while.</string>
    <string name="wifi_scan_null">Not found any AP!</string>
    <string name="wifi_state_unknown">WiFi state unknown, please retry.</string>
    <string name="title_activity_nowifi">NowifiActivity</string>
</resources>
