<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_no_wifi"
        android:textColor="#0000FF"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/no_wifi"/>
    <TextView
        android:id="@+id/tv_make"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:textColor="#0000FF"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Make_sure"/>
    <TextView
        android:id="@+id/tv_check"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:textColor="#0000FF"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Check_your"/>
    <TextView
        android:id="@+id/tv_verify"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:textColor="#0000FF"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Verify_that"/>
    <TextView
        android:id="@+id/tv_contact"
        android:padding="1dp"
        android:layout_marginLeft="10dp"
        android:textColor="#0000FF"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Contact"/>
</LinearLayout>
